; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_mem.c_av_realloc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_mem.c_av_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@max_alloc_size = common dso_local global i32 0, align 4
@ALIGN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @av_realloc(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load i32, i32* @max_alloc_size, align 4
  %8 = sub nsw i32 %7, 32
  %9 = sext i32 %8 to i64
  %10 = icmp ugt i64 %6, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %22

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* %5, align 8
  %16 = icmp ne i64 %15, 0
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i32
  %19 = sext i32 %18 to i64
  %20 = add i64 %14, %19
  %21 = call i8* @realloc(i8* %13, i64 %20)
  store i8* %21, i8** %3, align 8
  br label %22

22:                                               ; preds = %12, %11
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i8* @realloc(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
